--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +54,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13637"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(prophet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet = prophet[568:]"
    ]
   },
   {
@@ -70,11 +90,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the{7}',\n",
+       " 'chosen',\n",
+       " 'and',\n",
+       " 'the\\nbeloved,',\n",
+       " 'who',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'dawn',\n",
+       " 'unto',\n",
+       " 'his']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "prophet[1:11]"
    ]
   },
   {
@@ -88,9 +128,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 66,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def reference(x):\n",
     "    '''\n",
@@ -101,8 +154,10 @@
     "    Input: 'the{7}'\n",
     "    Output: 'the'\n",
     "    '''\n",
+    "    word = x.split(\"{\")\n",
+    "    return word[0]\n",
     "    \n",
-    "    # your code here"
+    "reference(prophet[1])"
    ]
   },
   {
@@ -114,11 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_reference = list(map(reference, prophet))"
    ]
   },
   {
@@ -130,9 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the', 'beloved,']"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def line_break(x):\n",
     "    '''\n",
@@ -143,8 +209,11 @@
     "    Input: 'the\\nbeloved'\n",
     "    Output: ['the', 'beloved']\n",
     "    '''\n",
+    "    str(x)\n",
+    "    list_linebreak = x.split(\"\\n\")\n",
+    "    return list_linebreak\n",
     "    \n",
-    "    # your code here"
+    "line_break(prophet[4])"
    ]
   },
   {
@@ -156,11 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_line = list(map(line_break, prophet_reference))"
    ]
   },
   {
@@ -172,11 +241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_flat = [item for sublist in prophet_line for item in sublist]"
    ]
   },
   {
@@ -190,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +280,10 @@
     "    \n",
     "    word_list = ['and', 'the', 'a', 'an']\n",
     "    \n",
-    "    # your code here"
+    "    if (x in word_list):\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True"
    ]
   },
   {
@@ -219,6 +291,15 @@
    "metadata": {},
    "source": [
     "Use the `filter()` function to filter out the words speficied in the `word_filter()` function. Store the filtered list in the variable `prophet_filter`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prophet_filter = list(filter(word_filter, prophet_flat))"
    ]
   },
   {
@@ -232,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
