--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import reduce from functools, numpy and pandas"
+    "from functools import reduce"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "13637"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        " 'his']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -139,7 +139,7 @@
        "'the'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "['the', 'beloved,']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,6 @@
     "    Input: 'the\\nbeloved'\n",
     "    Output: ['the', 'beloved']\n",
     "    '''\n",
-    "    str(x)\n",
     "    list_linebreak = x.split(\"\\n\")\n",
     "    return list_linebreak\n",
     "    \n",
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +350,7 @@
     "    Output: 'John Smith'\n",
     "    '''\n",
     "    \n",
-    "    # your code here"
+    "    return \" \".join([a, b])"
    ]
   },
   {
@@ -363,11 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_string = reduce(concat_space, prophet_filter)"
    ]
   },
   {
